# discord-clone

./: Cargo.toml  SITE DE DEMONSTRATION - PRONOTE - Espace Élèves - Page d'accueil.html
public/: index.html.j2
public/components/: timetable.html.j2  top_bar.html.j2
public/components/top_bar/: adding_popup.html.j2
public/components/top_bar/adding_popup/: classe_content.html.j2  content.html.j2
public/styles/: index.css  index.css.map  index.scss
reverse engineering/: backtrace  eleve.js  package-lock.json  package.json  requetes  structure  test.js
src/: api.rs  db.rs  main.rs
templates/: index.html.j2
