[package]
name = "discord-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { version="*", features = ["loader"]}
tokio = { version = "*", features = ["full"] }
httparse = "*"
http-bytes = "*"
time = "*"
walkdir = "*"
headless_chrome = "*"
anyhow = { version="*", features = ["backtrace"]}